src-tauri/test_error.txt
   Compiling app v0.2.0 (/Users/aviatam/ai-researcher/src-tauri)
warning: unused import: `super::*`
   --> src/models/project.rs:132:9
    |
132 |     use super::*;
    |         ^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `super::*`
   --> src/services/claude_service.rs:304:9
    |
304 |     use super::*;
    |         ^^^^^^^^

warning: unused import: `super::*`
  --> src/services/file_service.rs:57:9
   |
57 |     use super::*;
   |         ^^^^^^^^

error[E0599]: no method named `get_common_paths` found for struct `ollama_detector::OllamaDetector` in the current scope
   --> src/detector/mod.rs:330:37
    |
330 |         let ollama_paths = detector.get_common_paths();
    |                                     ^^^^^^^^^^^^^^^^ method not found in `ollama_detector::OllamaDetector`
    |
   ::: src/detector/cli_detector.rs:56:8
    |
 56 |     fn get_common_paths(&self) -> Vec<PathBuf>;
    |        ---------------- the method is available for `ollama_detector::OllamaDetector` here
    |
   ::: src/detector/ollama_detector.rs:9:1
    |
  9 | pub struct OllamaDetector;
    | ------------------------- method `get_common_paths` not found for this struct
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `CliDetector` which provides `get_common_paths` is implemented but not in scope; perhaps you want to import it
    |
311 +     use crate::detector::cli_detector::CliDetector;
    |

warning: unused variable: `files`
   --> src/services/project_service.rs:312:13
    |
312 |         let files = ProjectService::list_project_files("test-project");
    |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_files`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable `found_file_change` is assigned to, but never used
   --> src/services/file_watcher.rs:317:13
    |
317 |         let mut found_file_change = false;
    |             ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: consider using `_found_file_change` instead

warning: value assigned to `found_file_change` is never read
   --> src/services/file_watcher.rs:322:25
    |
322 |                         found_file_change = true;
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `temp_dir`
  --> src/services/file_service.rs:62:13
   |
62 |         let temp_dir = TempDir::new().unwrap();
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_temp_dir`

warning: unused variable: `project_id`
  --> src/services/file_service.rs:63:13
   |
63 |         let project_id = "test-project";
   |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project_id`

warning: unused variable: `file_name`
  --> src/services/file_service.rs:64:13
   |
64 |         let file_name = "test.md";
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_file_name`

warning: unused variable: `content`
  --> src/services/file_service.rs:65:13
   |
65 |         let content = "Test content";
   |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_content`

warning: unused variable: `e`
  --> src/services/encryption_service.rs:60:25
   |
60 |                     Err(e) => {
   |                         ^ help: if this is intentional, prefix it with an underscore: `_e`

For more information about this error, try `rustc --explain E0599`.
warning: `app` (lib test) generated 11 warnings
error: could not compile `app` (lib test) due to 1 previous error; 11 warnings emitted
